--- a/RWG/Views/Account/Login.cshtml
+++ b/RWG/Views/Account/Login.cshtml
@@ -3,14 +3,18 @@
         <h4 class="card-title">Login</h4>
 
         <form class="row g-3" method="post" action="@Url.Action("Login", "Account")">
+
             <div class="col-md-6">
+                @* email column *@
                 <input type="email" class="form-control" placeholder="Email" name="email" required />
             </div>
 
             <div class="col-md-6">
+                @* password column *@
                 <input type="password" class="form-control" placeholder="Password" name="password" required />
             </div>
 
+            @* Login/ submit response button *@
             <div class="col-md-6">
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
