--- a/RWG/Views/Shared/_NavBarButtons.cshtml
+++ b/RWG/Views/Shared/_NavBarButtons.cshtml
@@ -7,8 +7,9 @@
             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </li>
 
+        @* adds a logout option to the navigation bar when the user logs in *@
         @if (User!.Identity!.IsAuthenticated)
-                {
+        {
             <li class="nav-item">
                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
             </li>
