--- a/RWG/Views/Account/Register.cshtml
+++ b/RWG/Views/Account/Register.cshtml
@@ -2,32 +2,40 @@
     <div class="card-body bg-light">
         <h4 class="card-title">Register</h4>
 
-    <form class="row g-3" method="post" action="@Url.Action("Register", "Account")">
+        <form>
+            @* First name*@
+            <div class="mb-3">
+                <label for="firstName" class="form-label">First Name</label>
+                <input type="text" class="form-control" id="firstName">
+            </div>
 
-        @* using col-md-4 *@
-        <div class="col-md-4">
-            @* email column *@
-            @* Sets the minimum standard for the email *@
-            <input type="email" class="form-control" placeholder="Email" name="email" required />
-        </div>
+            @*Surname*@
+            <div class="mb-3">
+                <label for="surname" class="form-label">Surname</label>
+                <input type="text" class="form-control" id="surname">
+            </div>
 
-        <div class="col-md-4">
-            @* password column *@
-            @* Sets the minimum standard for the password *@
-            <input type="password" class="form-control" placeholder="Password" name="password" required />
-        </div>
+            @*Email address*@
+            <div class="mb-3">
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
 
-        @* confirm password column *@
-        <div class="col-md-4">
-            <input type="password" class="form-control" placeholder="Confirm Password" name="confirmPassword" required />
-        </div>
+            @*Password*@
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password">
+            </div>
 
-        @* Register/ submit response button *@
-        <div class="col-md-6">
-            <button type="submit" class="btn btn-primary"> Register</button>
-        </div>
+            @*Confirm password*@
+            <div class="mb-3">
+                <label for="confirmPassword" class="form-label">Confirm Password</label>
+                <input type="password" class="form-control" id="confirmPassword">
+            </div>
 
-    </form>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
 
     </div>
 </div>
