--- a/RWG/Views/Account/Register.cshtml
+++ b/RWG/Views/Account/Register.cshtml
@@ -2,39 +2,43 @@
     <div class="card-body bg-light">
         <h4 class="card-title">Register</h4>
 
-        <form>
+
+
+        <form class="row g-3" method="post" action="@Url.Action("Register", "Account")">
             @* First name*@
             <div class="mb-3">
                 <label for="firstName" class="form-label">First Name</label>
-                <input type="text" class="form-control" id="firstName">
+                <input type="text" class="form-control" placeholder="FirstName" name="firstName" required>
             </div>
 
             @*Surname*@
             <div class="mb-3">
                 <label for="surname" class="form-label">Surname</label>
-                <input type="text" class="form-control" id="surname">
+                <input type="text" class="form-control" placeholder="Surname" name="surname" required>
             </div>
 
             @*Email address*@
             <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                <input type="email" class="form-control" placeholder="Email" name="email" required>
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
 
             @*Password*@
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password">
+                <input type="password" class="form-control" placeholder="Password" name="password" required>
             </div>
 
             @*Confirm password*@
             <div class="mb-3">
                 <label for="confirmPassword" class="form-label">Confirm Password</label>
-                <input type="password" class="form-control" id="confirmPassword">
+                <input type="password" class="form-control" placeholder="Confirm Password" name="confirmPassword" required>
             </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="col-md-6">
+                <button type="submit" class="btn btn-primary"> Register</button>
+            </div>
         </form>
 
     </div>
