--- a/RWG/Views/Account/Login.cshtml
+++ b/RWG/Views/Account/Login.cshtml
@@ -1,25 +1,29 @@
-﻿<div class="card">
-    <div class="card-body bg-light">
-        <h4 class="card-title">Login</h4>
+﻿
+    <div class="card">
+        <div class="card-body bg-light">
+            <h4 class="card-title">Login</h4>
 
-        <form class="row g-3" method="post" action="@Url.Action("Login", "Account")">
+            <form class="row g-3" method="post" action="@Url.Action("Login", "Account")">
 
-            <div class="col-md-6">
-                @* email column *@
-                <input type="email" class="form-control" placeholder="Email" name="email" required />
-            </div>
+                <div class="col-md-6">
+                    @*email column*@
+                    <input type="email" class="form-control" placeholder="Email" name="email" required />
+                </div>
 
-            <div class="col-md-6">
-                @* password column *@
-                <input type="password" class="form-control" placeholder="Password" name="password" required />
-            </div>
+                <div class="col-md-6">
+                     @*password column*@
+                    <input type="password" class="form-control" placeholder="Password" name="password" required />
+                </div>
 
-            @* Login/ submit response button *@
-            <div class="col-md-6">
-                <button type="submit" class="btn btn-primary">Login</button>
-            </div>
+                 @*Login submit response button*@
+                <div class="col-md-6">
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </div>
 
-        </form>
+            </form>
 
+        </div>
     </div>
-</div>
+
+
+
