--- a/RWG/Views/Home/Index.cshtml
+++ b/RWG/Views/Home/Index.cshtml
@@ -1,9 +1,28 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@using RWG.Models
 
-<div class="text-center">
-    <h1 class="display-4">Welcome </h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@*
+    <div class="card mb-3">
+        <div class="card-body bg-light">
+            <h4 class="card-title">My Reminder Lists</h4>
+            <div class="bg-white">
+
+            </div>
+        </div>
+    </div>
+*@
+
+
+    <div class="text-center">
+        @if (User!.Identity!.IsAuthenticated)
+        {
+            <h1 class="display-4">Welcome @User.Identity.Name!</h1>
+        }
+        else
+        {
+            
+        }
+    </div>
 
