--- a/RWG/Views/Shared/_Layout.cshtml
+++ b/RWG/Views/Shared/_Layout.cshtml
@@ -32,12 +32,13 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - RWG - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - RWG
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
     <script src="~/js/mvc-grid/mvc-grid.js"></script>
     <script>
            document.querySelectorAll(".mvc-grid").forEach(element => new MvcGrid(element));
