--- a/RWG/Views/Home/Index.cshtml
+++ b/RWG/Views/Home/Index.cshtml
@@ -7,14 +7,15 @@
 
 
 
-    <div class="text-center">
-        @if (User!.Identity!.IsAuthenticated)
-        {
-            <h1 class="display-4">Welcome @User.Identity.Name!</h1>
-        }
-        else
-        {
-            
-        }
-    </div>
+<div class="text-center">
+    @if (User!.Identity!.IsAuthenticated)
+    {
+        @*@User.Identity.Name!*@
+        <h1 class="display-4">Welcome to RWG!</h1>
+    }
+    else
+    {
+
+    }
+</div>
 
