--- a/RWG/Views/Shared/_NavBarButtons.cshtml
+++ b/RWG/Views/Shared/_NavBarButtons.cshtml
@@ -8,29 +8,32 @@
         @if (User!.Identity!.IsAuthenticated)
         {
             @* sends login and register buttons to right side of the navigation bar*@
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
+            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-start">
             <li class="nav-item">
+                <a class="btn" asp-area="" asp-controller="Workout" asp-action="Workout">Workouts</a>
+            </li>
+            </div>
+
+             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
+                <li class="nav-item">
                 <a class="btn btn-danger" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
-            </li>
-        </div>
-            }
-            else
-            {
-            @* sends login and register buttons to right side of the navigation bar*@
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
-            <li class="nav-item me-2">
-                <a class="btn btn-success" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
-            </li>
-</div>
+                </li>
+             </div>
+         }
+          else
+          {
+    @* sends login and register buttons to right side of the navigation bar*@
+    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
+        <li class="nav-item me-2">
+            <a class="btn btn-success" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+        </li>
+    </div>
 
 
 
-            <li class="nav-item me-2">
-                <a class="btn btn-primary" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-            </li>
-            }
-
-
-
-        </ul>
+    <li class="nav-item me-2">
+        <a class="btn btn-primary" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+    </li>
+          }
+     </ul>
 </div
