--- a/RWG/Views/Account/Login.cshtml
+++ b/RWG/Views/Account/Login.cshtml
@@ -10,15 +10,15 @@
                 @*email column*@
                 <input type="email" class="form-control" placeholder="Email" name="email" required />
 
-                @*Validates the Email address form*@
+                @*Validates the Email address form
                 <div class="valid-feedback">
                     Looks Good!
                 </div>
 
-                @*If email form is inncorrect, it tells the user to enter a valid email address*@
+                @*If email form is inncorrect, it tells the user to enter a valid email address
                 <div class="invalid-feedback">
                     Please enter a valid Email
-                </div>
+                </div>*@
 
             </div>
 
@@ -26,15 +26,15 @@
                 @*password column*@
                 <input type="password" class="form-control" placeholder="Password" name="password" required />
 
-                @* Validates the password if it is correct *@
+                @* Validates the password if it is correct 
                 <div class="valid-feedback">
                     Looks Good!
                 </div>
 
-                @*If password form is inncorrect, it tells the user to enter a valid Password*@
+                @*If password form is inncorrect, it tells the user to enter a valid Password
                 <div class="invalid-feedback">
                     Please enter a valid Password
-                </div>
+                </div> *@
 
             </div>
 
