--- a/RWG/Views/Account/Login.cshtml
+++ b/RWG/Views/Account/Login.cshtml
@@ -1,24 +1,32 @@
 ﻿@model LoginViewModel
 
+@if (Model?.Error != null)
+{
+    <div class="alert alert-danger" role="alert">
+        @Model.Error
+    </div>
+}
+
 <div class="card">
     <div class="card-body bg-light">
         <h4 class="card-title">Login</h4>
 
         <form class="row g-3" method="post" action="@Url.Action("Login", "Account")">
+            <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
 
             <div class="col-md-6">
                 @*email column*@
                 <input type="email" class="form-control" placeholder="Email" name="email" required />
 
-                @*Validates the Email address form
-                <div class="valid-feedback">
-                    Looks Good!
-                </div>
+                @*Validates the Email address form*@
+            <div class="valid-feedback">
+                Looks Good!
+            </div>
 
-                @*If email form is inncorrect, it tells the user to enter a valid email address
-                <div class="invalid-feedback">
-                    Please enter a valid Email
-                </div>*@
+            @*If email form is inncorrect, it tells the user to enter a valid email address*@
+            <div class="invalid-feedback">
+                Please enter a valid Email
+            </div>
 
             </div>
 
@@ -26,24 +34,25 @@
                 @*password column*@
                 <input type="password" class="form-control" placeholder="Password" name="password" required />
 
-                @* Validates the password if it is correct 
-                <div class="valid-feedback">
-                    Looks Good!
-                </div>
+                 @*Validates the password if it is correct*@
+            <div class="valid-feedback">
+                Looks Good!
+            </div>
 
-                @*If password form is inncorrect, it tells the user to enter a valid Password
-                <div class="invalid-feedback">
-                    Please enter a valid Password
-                </div> *@
+            @*If password form is inncorrect, it tells the user to enter a valid Password*@
+            <div class="invalid-feedback">
+                Please enter a valid Password
+            </div> 
 
             </div>
 
             @*Login submit response button*@
-            <div class="col-md-6">
-                <button type="submit" class="btn btn-primary">
-                    Login
-                </button>
-            </div>
+        <div class="col-md-6">
+            <button type="submit" class="btn btn-primary">
+                Login
+            </button>
+            @Html.ActionLink("Register", "Register", "Account", null, new { @class = "btn btn-success" })
+        </div>
 
         </form>
 
