--- a/RWG/Views/Home/Index.cshtml
+++ b/RWG/Views/Home/Index.cshtml
@@ -5,17 +5,55 @@
 
 
 
-
-
+@* If the user is logged in: *@
 <div class="text-center">
     @if (User!.Identity!.IsAuthenticated)
-    {
-        @*@User.Identity.Name!*@
-        <h1 class="display-4">Welcome to RWG!</h1>
-    }
-    else
-    {
+                {
+    //Display this
+        <h1 class="display-4">Welcome Back! Have a Great Workout!</h1>
 
-    }
-</div>
+        <center>
+            <h1>Motivational Quotes</h1>
+            <p>“I hated every minute of training, but I said, ‘Don’t quit. Suffer now and live the rest of your life as a champion.” – Muhammad Ali </p>
+
+            <p>“We are what we repeatedly do. Excellence then is not an act but a habit.” –Aristotele</p>
+
+            <p>The body achieves what the mind believes.” – Napoleon Hill</p>
+
+            <p>“If you don’t find the time, if you don’t do the work, you don’t get the results.” – Arnold Schwarzenegger</p>
+
+            <p>“Dead last finish is greater than did not finish, which trumps did not start.” — Unknown</p>
+
+            <p>“Push harder than yesterday if you want a different tomorrow.” – Vincent Williams Sr.</p>
+
+            <p>“The real workout starts when you want to stop.” – Ronnie Coleman</p>
+
+            <p>“Take care of your body. It’s the only place you have to live.” — Jim Rohn</p>
+
+            <p>“I’ve failed over and over again in my life and that is why I succeed.” – Michael Jordan</p>
+
+            <p>“Once you are exercising regularly, the hardest thing is to stop it.” – Erin Gray</p>
+
+            <p>“The secret of getting ahead is getting started.” — Mark Twain</p>
+
+            <p>“Exercise should be regarded as tribute to the heart” – Gene Tunney</p>
+
+            <p>“Most people fail, not because of lack of desire, but, because of lack of commitment.” –Vince Lombardi</p>
+
+            <p>“You miss one hundred percent of the shots you don’t take.” – Wayne Gretzky</p>
+
+            <p>“If something stands between you and your success, move it. Never be denied.” – Dwayne “The Rock” Johnson</p>
+
+            <p>“All progress takes place outside the comfort zone.”– Michael John Bobak</p>
+
+            <p>“Just believe in yourself. Even if you don’t, just pretend that you do and at some point, you will.” – Venus Williams</p>
+            </center>
+            }
+            @* If they are not logged in: *@ 
+                else
+                {
+            //display this
+            <h1 class="display-4">Welcome to RWG!</h1>
+            }
+    </div>
 
