--- a/RWG/Views/Shared/_NavBarButtons.cshtml
+++ b/RWG/Views/Shared/_NavBarButtons.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+﻿<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between bg-dark-subtle">
+
     <ul class="navbar-nav flex-grow-1">
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -7,21 +8,21 @@
         @* adds a logout option to the navigation bar when the user logs in *@
         @if (User!.Identity!.IsAuthenticated)
         {
-            @* sends login and register buttons to right side of the navigation bar*@
+            @* adds workout button in navigation bar *@
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-start">
             <li class="nav-item">
                 <a class="btn" asp-area="" asp-controller="Workout" asp-action="Workout">Workouts</a>
             </li>
-            </div>
+    </div>
 
-             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
-                <li class="nav-item">
-                <a class="btn btn-danger" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
-                </li>
-             </div>
-         }
-          else
-          {
+    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
+        <li class="nav-item">
+            <a class="btn btn-danger" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
+        </li>
+    </div>
+}
+else
+{
     @* sends login and register buttons to right side of the navigation bar*@
     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
         <li class="nav-item me-2">
@@ -34,6 +35,6 @@
     <li class="nav-item me-2">
         <a class="btn btn-primary" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
     </li>
-          }
-     </ul>
-</div
+}
+        </ul>
+        </div
