--- a/RWG/Views/Progress/ExerciseProgress.cshtml
+++ b/RWG/Views/Progress/ExerciseProgress.cshtml
@@ -17,7 +17,7 @@
 
 <div class="card mb-3">
     <div class="card-body bg-light">
-        <h4 class="card-title">Workout Progress</h4>
+        <h4 class="card-title">Exercise Progress</h4>
         <div class="bg-white">
             @(Html.Grid(Model)
             .Build(columns =>
